--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -62,6 +62,11 @@ th:src="@{/webjars/jquery/2.1.3/jquery.min.js}"></script>
     <input type="text" class="form-control" id="q" name="q"
      placeholder="Escribe algo que quieras buscar"/>
    </div>
+   <div class="row">
+   <div>Opcional</div>
+    <input type="text" class="form-control" id="max" name="max"
+     placeholder="Escribe el numero maximo de resultados para tu busqueda"/>
+   </div>
    <div class="row">&nbsp;</div>
    <div class="row">
     <button type="submit" class="btn btn-default center-block" >Buscar</button>
